# mi-zoo

./: .gitignore  README.md  pyproject.toml
data/manual/: product_model.csv  product_number_raw.csv
data/processed/: categories.csv  desc_translations.json  devices.csv  name_translations.json  product_number.csv
data/raw/: plugin_config_de-en  recommend_deivce_name.json
markdown/: devices.md
notebooks/: 1. Basic Table.ipynb
