[tool.poetry]
name = "mizoo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.8"
pandas = "1.3.5"
numpy = "1.22.0"
notebook = "^6.4.7"
lxml = "^4.6.2"
requests = "^2.25.1"
pandas-profiling = "^2.11.0"
googletrans = "4.0.0rc1"
unidecode = "^1.2.0"
langdetect = "^1.0.8"
tqdm = "^4.58.0"
tabulate = "^0.8.9"
pytablewriter = "^0.58.0"
html5lib = "^1.1"
beautifulsoup4 = "^4.10.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
